# pydantic-ai-provenance

./: .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  example.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
api-reference/: index.html
docs/: api-reference.md  getting-started.md  index.md
docs/guides/: citation-format.md  multi-agent.md  verification.md  visualization.md
examples/: _common.py  example.py  multi_agent.py  multi_agent_provenance.html  single_agent.py  verify_citations.py
getting-started/: index.html
guides/citation-format/: index.html
guides/multi-agent/: index.html
guides/verification/: index.html
guides/visualization/: index.html
pydantic_ai_provenance/: __init__.py  attribution.py  capability.py  citations.py  graph.py  store.py  verification.py  viz.py
search/: search_index.json
src/pydantic_ai_provenance/: attribution.py  capability.py  citations.py  graph.py  store.py  verification.py  viz.py
tests/: conftest.py  test_attribution.py  test_capability.py  test_citations.py  test_graph.py  test_store.py  test_verification.py  test_viz.py
