[project]
name = "pydantic-ai-provenance"
version = "0.1.0"
description = "Provenance tracking for pydantic-ai agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic-ai-slim[anthropic,openai]>=1.80",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pydantic_ai_provenance"]
